tests/bad/match_upon2.lens
match upon hi (
    "(?<foo>foo)"
)
